layout bug fix

--- a/docs/_sass/navigation.scss
+++ b/docs/_sass/navigation.scss
@@ -185,7 +185,7 @@
 
 .breadcrumb-nav {
   @include mq(md) {
-    margin-top: -$sp-4;
+    margin-top: $sp-4;
   }
 }
 
